--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 .hero-img {
     margin-top: 50px;
-    height: 500px;
+    height: 400px;
     width: 80%;
 }
 
@@ -275,13 +275,15 @@ img.vert-move {
 /* media qureis */
 
 
-@media (min-width: 768px) and (max-width: 1115px) {
- 
-
-}
 
 @media (min-width: 576px) and (max-width: 768px) {
    
+.hero-img {
+    margin-top: 50px;
+    height: 400px;
+    width: 70%;
+}
+
 }
 
 
